# Reach

./: .gitignore  Makefile  README.md  development-site.conf  package-lock.json  package.json  webpack.config.js
LearnToFlac/LearnToFlac/: flac.cpp  flac.hpp  main.cpp
LearnToFlac/LearnToFlac.xcodeproj/: project.pbxproj
LearnToFlac/LearnToFlac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
common/js/: Protocol.js
reach/: webpack.config.js
reach-spa/: Makefile  package-lock.json  package.json  reach-development.conf
reach-spa/ReachCodec/: CMakeLists.txt  DevelopmentGlue.js  Makefile  ProductionGlue.js  conanfile.txt  index.html
reach-spa/ReachCodec/include/: AudioPlayer.hpp  AudioStreamDecoder.h  AudioStreamDecoder.hpp  BufferedAudioStreamWriter.hpp  DecoderFactory.hpp  namespace.hpp
reach-spa/ReachCodec/include/Decoders/: FlacDecoder.hpp
reach-spa/ReachCodec/include/Interfaces/: Decoder.hpp
reach-spa/ReachCodec/src/: AudioPlayer.cpp  AudioStreamDecoder.cpp  BufferedAudioStreamWriter.cpp  DecoderFactory.cpp  EmscriptenBindings.cpp  FlacDecoder.cpp
reach-spa/public/: index.html  manifest.json
reach-spa/src/: BufferedStreamReader.js  Player.js  Reach.js  Reach.test.js  index.js
reach-spa/src/flac-decoder/: Makefile  StreamDecoder.cpp
reach/js/: main.js
reach/src/: main.js
static/: index.html
static/js/: main.js
